TestSuite/errors/err0541.pas
//!Только динамический массив может описываться с ключевым словом params
type TClass = class
  
end;
procedure pr1(params par1: array[,] of TClass);
begin end;

begin
  
end.